--- a/Analisis-de-Homicidios-en-Colombia.html
+++ b/Analisis-de-Homicidios-en-Colombia.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Andrés Barrios | Jesus Gallardo" />
+<meta name="author" content="Andrés Barrios | Jesus Gallardo | Luis Tafur" />
 
 <meta name="date" content="2024-04-22" />
 
@@ -352,7 +352,8 @@ display: none;
 
 <h1 class="title toc-ignore"><strong>Análisis de Series de Tiempo de
 Homicidios en colombia</strong></h1>
-<h4 class="author"><em>Andrés Barrios | Jesus Gallardo</em></h4>
+<h4 class="author"><em>Andrés Barrios | Jesus Gallardo | Luis
+Tafur</em></h4>
 <h4 class="date"><em>2024-04-22</em></h4>
 
 </div>
